# surrealstarter

./: Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: db.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handlers/: discord.rs
